@@ -1,3 +1,11 @@
+2021-12-07  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
+
+	* suppresserrors.ch, tests/suppress_errors.tex: New files
+	  to support \suppresslongerror, \suppressoutererror and
+	  \suppressmathparerror.
+	* am/eptex.am: Add suppresserrors.ch.
+	* eptex.ech, eptex_version.h: Version 20211207.
+
 2021-07-15  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
 
 	* eptex.ech: Fix a warning message from \epTeXinputencoding.
