@@ -1,3 +1,10 @@
+2021-12-05  Andreas Scherer  <https://ascherer.github.io>
+
+	* comm-w2c.ch,
+	* ctwill-mini.ch,
+	* ctwill-w2c.ch,
+	* cwebman-w2c.ch: Active link to the CTWILL user manual.
+
 2021-11-26  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctwill-mini.ch,
